test/fail/and-pattern-overlap.mo
let (a : Nat) and (a : Nat) = 5;
